--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "18.0.0",
     "react-native": "0.69.1",
+    "react-native-elements": "^3.4.2",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-vector-icons": "^9.2.0"
   },
