--- a/ios/Podfile
+++ b/ios/Podfile
@@ -15,7 +15,7 @@ target 'UberEatsClone' do
     # to enable hermes on iOS, change `false` to `true` and then install pods
     :hermes_enabled => flags[:hermes_enabled],
     :fabric_enabled => flags[:fabric_enabled],
-    :path => '../node_modules/react-native-vector-icons',
+    # :path => '../node_modules/react-native-vector-icons',
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
