--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
     "react": "18.0.0",
     "react-native": "0.69.1",
+    "react-native-bouncy-checkbox": "^2.1.10",
     "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^2.5.0",
     "react-native-google-places-autocomplete": "^2.4.1",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "^3.15.0",
+    "react-native-vector-icons": "^9.2.0",
+    "tslib": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
